--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.2.1",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "filepond": "^4.30.4",
+    "framer-motion": "^11.15.0",
+    "lucide-react": "^0.468.0",
     "next": "13.4.12",
     "pdf2json": "^3.0.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
     "tailwindcss": "3.3.3",
+    "three": "^0.171.0",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   }
