--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/uuid": "^9.0.2",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
     "autoprefixer": "10.4.14",
     "filepond": "^4.30.4",
     "framer-motion": "^11.15.0",
