--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.1.1",
     "filepond": "^4.30.4",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
@@ -32,6 +33,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
+    "simplex-noise": "^4.0.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "three": "^0.171.0",
     "typescript": "5.1.6",
