--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "@tabler/icons-react": "^3.26.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
@@ -33,7 +35,6 @@
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
-    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "three": "^0.171.0",
