--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
@@ -28,7 +29,7 @@
     "filepond": "^4.30.4",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.468.0",
-    "next": "13.4.12",
+    "next": "^15.1.3",
     "pdf2json": "^3.0.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
