--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@react-pdf/renderer": "^4.1.6",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@tabler/icons-react": "^3.26.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "@types/react-pdf": "^6.2.0",
     "@types/uuid": "^9.0.2",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
