--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "clsx": "^2.1.1",
     "filepond": "^4.30.4",
     "framer-motion": "^11.15.0",
+    "katex": "^0.16.19",
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
     "pdf2json": "^3.0.4",
@@ -38,10 +39,19 @@
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
+    "react-katex": "^3.0.1",
+    "react-markdown": "^9.0.1",
+    "react-mathjax2": "^0.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "3.3.3",
     "three": "^0.171.0",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/react-katex": "^3.0.4"
   }
 }
