--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^15.1.3",
     "pdf2json": "^3.0.4",
     "postcss": "8.4.27",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
@@ -52,6 +53,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.5",
     "@types/react-katex": "^3.0.4"
   }
 }
