--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.7.4",
     "@clerk/nextjs": "^6.9.6",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@react-pdf/renderer": "^4.1.6",
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "@shadcn/ui": "^0.0.4",
     "@tabler/icons-react": "^3.26.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.18",
@@ -28,11 +31,13 @@
     "@upstash/redis": "^1.34.3",
     "autoprefixer": "10.4.14",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "filepond": "^4.30.4",
     "framer-motion": "^11.15.0",
     "katex": "^0.16.19",
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
+    "next-auth": "^4.24.11",
     "pdf2json": "^3.0.4",
     "postcss": "8.4.27",
     "prismjs": "^1.29.0",
