--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.8.5",
     "pdf2json": "^3.0.4",
     "postcss": "8.4.27",
     "prismjs": "^1.29.0",
