--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-mathjax2": "^0.0.2",
+    "recharts": "^2.15.1",
     "rehype-katex": "^7.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
